--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -9,9 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>web</artifactId>
-    <packaging>war</packaging>
-
+    <artifactId>webapp</artifactId>
     <dependencies>
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -28,8 +26,18 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <configuration>
-                    <webXml>webapp\WEB-INF\web.xml</webXml>
+                    <webXml>web\WEB-INF\web.xml</webXml>
                     <warSourceDirectory>web\WEB-INF</warSourceDirectory>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.3</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
         </plugins>
