--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -9,6 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <packaging>war</packaging>
     <artifactId>webapp</artifactId>
     <dependencies>
         <dependency>
