--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+*.idea
+*.iml
 *.class
 
 # Mobile Tools for Java (J2ME)
@@ -9,6 +11,3 @@
 *.ear
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-.idea/
-*.iml
