--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -18,11 +18,24 @@
             <version>3.1.0</version>
             <scope>provided</scope>
         </dependency>
-            <dependency>
-                <groupId>proff_2</groupId>
-                <artifactId>database</artifactId>
-                <version>1.0-SNAPSHOT</version>
-            </dependency>
+        <dependency>
+            <groupId>proff_2</groupId>
+            <artifactId>database</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jsp-api</artifactId>
+            <version>2.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
