--- a/webapp/web/WEB-INF/web.xml
+++ b/webapp/web/WEB-INF/web.xml
@@ -5,6 +5,6 @@
          version="3.1">
 
     <welcome-file-list>
-        <welcome-file>html/Main.html</welcome-file>
+        <welcome-file>Main.html</welcome-file>
     </welcome-file-list>
 </web-app>
