--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -45,6 +45,21 @@
     </dependencies>
 
     <build>
+        <resources>
+            <resource>
+                <directory>web.css</directory>
+            </resource>
+            <resource>
+                <directory>web.html</directory>
+            </resource>
+            <resource>
+                <directory>web.img</directory>
+            </resource>
+            <resource>
+                <directory>web.js</directory>
+            </resource>
+
+        </resources>
         <finalName>planet</finalName>
         <plugins>
             <plugin>
@@ -60,8 +75,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.3</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>1.7</source>
+                    <target>1.7</target>
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
