--- a/pom.xml
+++ b/pom.xml
@@ -29,4 +29,11 @@
         </plugins>
     </build>
 
+    <dependencies>
+    <dependency>
+        <groupId>mysql</groupId>
+        <artifactId>mysql-connector-java</artifactId>
+        <version>5.1.6</version>
+    </dependency>
+    </dependencies>
 </project>
