logging to file added

--- a/webapp/web/WEB-INF/web.xml
+++ b/webapp/web/WEB-INF/web.xml
@@ -6,4 +6,8 @@
     <welcome-file-list>
         <welcome-file>Main.html</welcome-file>
     </welcome-file-list>
+    <context-param>
+        <param-name>log4j-config-location</param-name>
+        <param-value>WEB-INF/log4j.properties</param-value>
+    </context-param>
 </web-app>
