--- a/pom.xml
+++ b/pom.xml
@@ -35,5 +35,10 @@
         <artifactId>mysql-connector-java</artifactId>
         <version>5.1.6</version>
     </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
     </dependencies>
 </project>
