log4j>> save to tomcat

--- a/webapp/web/WEB-INF/log4j.properties
+++ b/webapp/web/WEB-INF/log4j.properties
@@ -1,7 +1,7 @@
 log4j.rootLogger=INFO, file
 
 log4j.appender.file=org.apache.log4j.FileAppender
-log4j.appender.file.file=C:\\Log4jPlanetLog.log
+log4j.appender.file.file=${catalina.base}/logs/PlanetLog4jLog.log
 log4j.appender.file.ImmediateFlush=true
 log4j.appender.file.MaxFileSize=1MB
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
