--- a/webapp/web/WEB-INF/log4j.properties
+++ b/webapp/web/WEB-INF/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=INFO, file
+log4j.rootLogger=INFO, console
 
 log4j.appender.file=org.apache.log4j.FileAppender
 log4j.appender.file.file=C:\\Log4jPlanetLog.log
