--- a/webapp/web/WEB-INF/web.xml
+++ b/webapp/web/WEB-INF/web.xml
@@ -4,15 +4,15 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
 
-    <servlet>
-        <servlet-name>Hello</servlet-name>
-        <servlet-class>planet.servlets.Hello</servlet-class>
-    </servlet>
+    <!--<servlet>-->
+        <!--<servlet-name>Hello</servlet-name>-->
+        <!--<servlet-class>planet.servlets.Hello</servlet-class>-->
+    <!--</servlet>-->
 
-    <servlet-mapping>
-        <servlet-name>Hello</servlet-name>
-        <url-pattern>/hello.do</url-pattern>
-    </servlet-mapping>
+    <!--<servlet-mapping>-->
+        <!--<servlet-name>Hello</servlet-name>-->
+        <!--<url-pattern>/hello.do</url-pattern>-->
+    <!--</servlet-mapping>-->
     <welcome-file-list>
         <welcome-file>main.jsp</welcome-file>
     </welcome-file-list>
