added some additional methods for persistence and logger

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 *.idea
 *.iml
 *.class
-
+*.log
 
 #Eclipse
 .classpath
@@ -17,6 +17,3 @@ target/
 *.jar
 *.war
 *.ear
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-*.iml
