--- a/webapp/web/WEB-INF/web.xml
+++ b/webapp/web/WEB-INF/web.xml
@@ -16,6 +16,14 @@
     <welcome-file-list>
         <welcome-file>main.jsp</welcome-file>
     </welcome-file-list>
+    <filter>
+        <filter-name>LocalFilter</filter-name>
+        <filter-class>planet.servlets.LocalFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>LocalFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
     <context-param>
         <param-name>log4j-config-location</param-name>
         <param-value>WEB-INF/log4j.properties</param-value>
