--- a/webexamples/pom.xml
+++ b/webexamples/pom.xml
@@ -60,7 +60,13 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.6</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+        </dependency>
     </dependencies>
+
 
     <build>
         <finalName>tests</finalName>
