--- a/database/pom.xml
+++ b/database/pom.xml
@@ -39,6 +39,11 @@
             <artifactId>javax.el-api</artifactId>
             <version>3.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>4.1.7.RELEASE</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
