--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -53,6 +53,12 @@
             <version>3.0.5</version>
         </dependency>
 
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-context</artifactId>
+                <version>4.1.7.RELEASE</version>
+            </dependency>
+
     </dependencies>
 
     <build>
