--- a/spring-test/pom.xml
+++ b/spring-test/pom.xml
@@ -49,8 +49,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <configuration>
-                    <webXml>web\WEB-INF\web.xml</webXml>
-                    <warSourceDirectory>web\</warSourceDirectory>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
                 </configuration>
             </plugin>
             <plugin>
